天宮こころ

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>.°ʚいつも心に天宮こころɞ°.</h1>
+<!DOCTYPE html>
+<html lang="
+" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <<style media="screen">
+      img{width:75%;}
+    </style>
+  </head>
+  <body>
+    <h1>.°ʚいつも心に天宮こころɞ°.</h1>
+    <<img src="OIP.jpg" alt="">
+  </body>
+</html>
