--- a/calc.html
+++ b/calc.html
@@ -8,13 +8,16 @@
   <body>
     <input id="int1" type="text" name="" value="">
     <input id="int2" type="text" name="" value="">
+    <button onclick="keisan()" type="button" name="button"></button>
     <script type="text/javascript">
+    function keisan() {
       var prompt_a = prompt("一つ目の数を入れてください");
       var prompt_b = prompt("二つ目の数を入れてください");
 
       var result = parseInt(prompt_a) + parseInt(prompt_b);
 
       alert(result);
+    }
     </script>
   </body>
 </html>
